GearsetPOC/force-app/main/default/objects/PKB_Article_Feedback_Deflection__c/fields/Article_Language__c.field-meta.xml
<CustomField>
    <fullName>Article_Language__c</fullName>
    <label>Article Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>