GearsetPOC/force-app/main/default/objects/PKB_Article_Feedback_Deflection__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PKB Article Deflection</relationshipLabel>
    <relationshipName>PKB_Article_Deflection</relationshipName>
    <type>Lookup</type>
</CustomField>