GearsetPOC/force-app/main/default/objects/PKB_Article_Feedback_Deflection__c/fields/Was_Article_Useful__c.field-meta.xml
<CustomField>
    <fullName>Was_Article_Useful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User feedback on whether or not the article was useful</description>
    <label>Was Article Useful?</label>
    <type>Checkbox</type>
</CustomField>